--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,8 +39,8 @@ website:
             text: Safety
           - href: content/Inventory.qmd
             text: Inventory
-          - href: content/Hardware.qmd
-            text: Hardware
+          # - href: content/Hardware.qmd
+          #   text: Hardware
       - href: content/FieldMethods.qmd
         text: "Field Methods"
       - href: content/DataManagement.qmd
