--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,15 +54,17 @@ website:
           - content/AnalysisMethods.qmd
       - href: content/Reporting.qmd
         text: Reporting
-      - section: "Optional Pages"
-        contents: 
-          - content/SharedValues.qmd
-          - content/Onboarding.qmd
-          - content/Offboarding.qmd
-          - content/FieldMethods.qmd
-          - content/OpenScience.qmd
-          - content/PublicationsPresentations.qmd
-          - content/Resources.qmd
+      - href: content/PublicationsPresentations.qmd
+        text: Publications and Presentations
+      # - section: "Optional Pages"
+      #   contents: 
+      #     - content/SharedValues.qmd
+      #     - content/Onboarding.qmd
+      #     - content/Offboarding.qmd
+      #     - content/FieldMethods.qmd
+      #     - content/OpenScience.qmd
+      #     - content/PublicationsPresentations.qmd
+      #     - content/Resources.qmd
       - section: "NMFS Open Science Directions"
         contents:
           - content/NMFS_OpenSciDirections/Intro.qmd
