--- a/_quarto.yml
+++ b/_quarto.yml
@@ -56,6 +56,8 @@ website:
         text: Reporting
       - href: content/PublicationsPresentations.qmd
         text: Publications and Presentations
+      - href: content/Onboarding.qmd
+        text: Onboarding Material
       - href: content/TrainingMaterial.qmd
         text: Training Material
       # - section: "Optional Pages"
